@startuml
title Design Level Class Diagram for Modifying Account Details

package "Reader Subdomain" {
    class ReaderController {
        + getReaderByReaderId(userId: String) : ResponseEntity<ReaderResponseModel>
        + updateReader(userId: String, requestModel: ReaderRequestModel) : ResponseEntity<ReaderResponseModel>
    }

    class ReaderService {
        + getReaderByReaderId(readerId: String) : ReaderResponseModel
        + updateReader(readerId: String, requestModel: ReaderRequestModel) : ReaderResponseModel
    }

    class ReaderRepository {
        + findReaderByReaderIdentifierId(readerId: String) 
        + save(reader: Reader) : Reader
    }

    class Reader {
        - id: String
        - auth0userId: String
        - firstName: String
        - lastName: String
        - emailAddress: String
        - password: String
    }

    class ReaderRequestModel {
        - firstName: String
        - lastName: String
        - emailAddress: String
        - password: String
    }

    class ReaderResponseModel {
        - id: String
        - firstName: String
        - lastName: String
        - emailAddress: String
    }
    
    ReaderController --> ReaderService
    ReaderService --> ReaderRepository
    ReaderRepository --> Reader
    ReaderRequestModel --> Reader
    Reader --> ReaderResponseModel
}
@enduml
